testsuite/tests/typecheck/should_fail/T18455.stderr

T18455.hs:7:37: error:
    SPECIALISE instance type cannot contain nested ‘forall’s or contexts
    In a SPECIALISE instance pragma
